--- a/kubernetes/pxFrontendDeploy.yaml
+++ b/kubernetes/pxFrontendDeploy.yaml
@@ -42,4 +42,25 @@ spec:
           value: "http://pxbroker-service"
         ports:
         - containerPort: 8081
-
+        livenessProbe:
+          exec:
+            command:
+              - sh
+              - -ec
+              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
+          initialDelaySeconds: 7
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 6
+        readinessProbe:
+          exec:
+            command:
+              - sh
+              - -ec
+              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 6
