--- a/kubernetes/pxFrontendDeploy.yaml
+++ b/kubernetes/pxFrontendDeploy.yaml
@@ -47,7 +47,7 @@ spec:
             command:
               - sh
               - -ec
-              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/frontend/ping || exit 1'
+              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
           initialDelaySeconds: 7
           periodSeconds: 10
           timeoutSeconds: 5
@@ -58,7 +58,7 @@ spec:
             command:
               - sh
               - -ec
-              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/frontend/ping || exit 1'
+              - 'wget --no-verbose --tries=1 --spider http://127.0.0.1:8081/ping || exit 1'
           initialDelaySeconds: 5
           periodSeconds: 10
           timeoutSeconds: 5
