Keycloak config to docker-compose  Changes to be committed: 	modified:   portworx-cli.code-workspace 	modified:   project/docker-compose.yaml

--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -14,6 +14,10 @@ services:
       replicas: 1
     environment:
       BROKER_URL: "http://broker-service:8080"
+      KEYCLOAK_URL: "https://keycloak-keycloak.apps.okd.calvarado04.com"
+      KEYCLOAK_REALM: "portworx"
+      KEYCLOAK_CLIENT_ID: "portworx-frontend"
+      KEYCLOAK_SECRET:
 
   broker-service:
     build:
