--- a/kubernetes/pxBrokerDeploy.yaml
+++ b/kubernetes/pxBrokerDeploy.yaml
@@ -40,6 +40,26 @@ spec:
         env:
         - name: "PORTWORX_GRPC_URL"
           value: "portworx-api.kube-system:9020"
+        - name: "KEYCLOAK_URL"
+          valueFrom:
+            secretKeyRef:
+              name: keycloak
+              key: keycloakUrl
+        - name: "KEYCLOAK_CLIENT_ID"
+          valueFrom:
+            secretKeyRef:
+              name: keycloak
+              key: keycloakClientID
+        - name: "KEYCLOAK_SECRET"
+          valueFrom:
+            secretKeyRef:
+              name: keycloak
+              key: keycloakSecret
+        - name: "KEYCLOAK_REALM"
+          valueFrom:
+            secretKeyRef:
+              name: keycloak
+              key: keycloakRealm
         ports:
         - containerPort: 8080
         livenessProbe:
