--- a/openshift/broker-deploymentconfig.yaml
+++ b/openshift/broker-deploymentconfig.yaml
@@ -25,19 +25,27 @@ spec:
               memory: 100Mi
           env:
           - name: "PORTWORX_GRPC_URL"
-            value: "portworx-api.kube-system:9020"
+            value: "portworx-service.kube-system:9020"
           - name: "KEYCLOAK_URL"
-            value: "https://keycloak-keycloak.apps.okd.calvarado04.com"
+            valueFrom:
+              secretKeyRef:
+                name: keycloak
+                key: keycloakUrl
           - name: "KEYCLOAK_CLIENT_ID"
-            value: "portworx-client"
+            valueFrom:
+              secretKeyRef:
+                name: keycloak
+                key: keycloakClientID
           - name: "KEYCLOAK_SECRET"
             valueFrom:
               secretKeyRef:
                 name: keycloak
                 key: keycloakSecret
-                optional: false 
           - name: "KEYCLOAK_REALM"
-            value: "portworx"
+            valueFrom:
+              secretKeyRef:
+                name: keycloak
+                key: keycloakRealm
           ports:
           - containerPort: 8081
           livenessProbe:
