--- a/openshift/broker-deploymentconfig.yaml
+++ b/openshift/broker-deploymentconfig.yaml
@@ -46,6 +46,11 @@ spec:
               secretKeyRef:
                 name: keycloak
                 key: keycloakRealm
+          - name: "PORTWORX_TOKEN"
+            valueFrom:
+              secretKeyRef:
+                name: portworx-token
+                key: token
           ports:
           - containerPort: 8081
           livenessProbe:
@@ -83,3 +88,11 @@ spec:
   ports:
   - port: 8081
     targetPort: 8081
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: portworx-token
+type: Opaque
+data:
+  token: ""
