--- a/kubernetes/px-client-ingress-chocolate.yaml
+++ b/kubernetes/px-client-ingress-chocolate.yaml
@@ -2,7 +2,6 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: px-client-ingress
-  namespace: portworx-client
   annotations:
     nginx.ingress.kubernetes.io/add-base-url: 'true'
     nginx.ingress.kubernetes.io/app-root: /portworx
@@ -21,13 +20,13 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: pxfrontend-service
+                name: frontend-svc
                 port:
                   number: 8082
           - path: /portworx
             pathType: Prefix
             backend:
               service:
-                name: pxfrontend-service
+                name: frontend-svc
                 port:
                   number: 8082
