--- a/kubernetes/keycloak.yaml
+++ b/kubernetes/keycloak.yaml
@@ -33,6 +33,8 @@ spec:
       labels:
         app: keycloak
     spec:
+      imagePullSecrets:
+      - name: docker-hub
       containers:
       - name: keycloak
         image: calvarado2004/portworx-client-keycloak:latest
@@ -63,11 +65,9 @@ spec:
         - name: http
           containerPort: 8080
         readinessProbe:
-          exec:
-            command:
-              - sh
-              - -ec
-              - 'curl -s http://127.0.0.1:8080/realms/master || exit 1'
+          httpGet:
+            path: /auth
+            port: 8080
         resources:
           requests:
             cpu: 200m
