--- a/kubernetes/postgres.yaml
+++ b/kubernetes/postgres.yaml
@@ -35,7 +35,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: portworx-db-sc
+        storageClassName: px-csi-db
         resources:
           requests:
             storage: "3Gi"
